tests/fail/var_not_bound.py
def foo() -> int:
    return a


foo()
a = 10  # var 'a' is not yet defined when call happens
